--- a/notebooks/Thesis_Plots_Ch41_Spirals.ipynb
+++ b/notebooks/Thesis_Plots_Ch41_Spirals.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "4b0d80dd-5171-4cd1-8eff-50e74593f076",
    "metadata": {},
    "outputs": [],
@@ -31,10 +31,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "id": "df978b16-c792-4b33-bf82-23a2e79544f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attaching package: ‘dplyr’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "    filter, lag\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    intersect, setdiff, setequal, union\n",
+      "\n",
+      "\n",
+      "Loading required package: viridisLite\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘gridExtra’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:dplyr’:\n",
+      "\n",
+      "    combine\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(dplyr)\n",
     "library(viridis)\n",
@@ -53,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "id": "54213882-128d-406b-b9b1-6049bf134d3d",
    "metadata": {},
    "outputs": [],
@@ -79,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "id": "6519112b-2eb4-4722-8c93-41092d90255c",
    "metadata": {
     "tags": []
@@ -91,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "id": "602cd4c4-5b6e-4dac-9e29-cce9dee9f2c8",
    "metadata": {
     "tags": []
@@ -106,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "id": "17baa994-dbd7-45c7-a779-d17061b3aa04",
    "metadata": {
     "tags": []
@@ -129,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "id": "01ba45c9-dbb1-485a-b02d-478376121db8",
    "metadata": {},
    "outputs": [],
@@ -149,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "id": "c2a8c347-f95f-4439-97bb-065669d886f2",
    "metadata": {},
    "outputs": [],
@@ -170,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "id": "6e3fc67a-6295-433b-8996-9473fe35f07f",
    "metadata": {},
    "outputs": [
@@ -206,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "id": "b1ad2a5b-3575-403a-a30d-4af762ee61d0",
    "metadata": {
     "tags": []
@@ -252,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 11,
    "id": "d6850701-2e26-4061-bffc-764b6d3a24a5",
    "metadata": {},
    "outputs": [],
@@ -262,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 12,
    "id": "197fc22f-8e73-41b4-8abe-9316fb20c6ad",
    "metadata": {},
    "outputs": [],
@@ -291,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 13,
    "id": "c145da78-9f47-426f-b7fb-e0962c5e1797",
    "metadata": {},
    "outputs": [],
@@ -317,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 14,
    "id": "151cca07-1215-4590-97d4-12faec181935",
    "metadata": {},
    "outputs": [],
@@ -355,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 15,
    "id": "77466113-92fc-425f-b9ab-348040427c1f",
    "metadata": {},
    "outputs": [],
@@ -400,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 16,
    "id": "5e65a59d-f8b4-4c20-bab3-20e239775009",
    "metadata": {},
    "outputs": [
@@ -507,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "id": "21cf346c-570a-4790-b2f5-4ffdd96b4db5",
    "metadata": {},
    "outputs": [
