--- a/tex/sections/a-appendix.tex
+++ b/tex/sections/a-appendix.tex
@@ -36,10 +36,12 @@ Then
 
 \section{Discussion of Possible Extensions to Closed Curves}
 \label{app:a-closed}
+\todo[inline]{Vielleicht einfach weglassen.}
 
 
 \section{Shape-Smoothing Using the Estimated Covariance-Surface}
 \label{app:a-smooth}
+\todo[inline]{In Form schreiben.}
 Idea: Smooth $q$ in mean basis $b(t)$, so that $\hat{q}(t) = b(t)^T \hat{\theta}_q$. Then the scalar products simplify to
 $$ \langle q, \hat{p} \rangle \approx \hat{\theta}_q^H G \hat{\theta} $$
 $$ \langle q, q \rangle \approx \hat{\theta}_q^H G \hat{\theta}_q $$
